# market-model

./: .gitignore  .gitmodules  README.md  market-model.cabal  stack.yaml
doc/: market-interface-model.md  strategy-control-model.md
src/: MarketBasics.hs  MarketTypes.hs  Util.hs
src/Market/: Basics.hs  Coins.hs  Interface.hs  Types.hs  Util.hs
test/: Test.hs
