name:                market-model
version:             0.4.0.0
synopsis:            A model for continuous double-auction markets
description:         Please see README.md
homepage:            https://github.com/dimitri-xyz/market-model#readme
author:              Dimitri DeFigueiredo
maintainer:          defigueiredo@ucdavis.edu
copyright:           2017 Dimitri DeFigueiredo
license:             BSD3
license-file:        LICENSE
category:            finance
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

library
  hs-source-dirs:     src
  exposed-modules:    Market.Types
                    , Market.Util

  default-language:   Haskell2010
  build-depends:      base
                    , razao-base
                    , deepseq

  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -j



test-suite test-market-model

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs

  build-depends:      base
                    , razao-base
                    , market-model
                    , HUnit

  ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -j -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/dimitri-xyz/market-model
